<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommunityPES</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nombreAplicacion">Community PES</string>
    <string name="nuevoAmistodo">Nuevo partido amistoso</string>
    <string name="nuevaCopa">Nueva copa</string>
    <string name="nuevaLiga">Nueva Liga</string>
    <string name="verEst">Ver estadisticas</string>
    <string name="gestionUsu">Gestion de Usuarios</string>
    <string name="title_activity_gestion_usuarios">GestionUsuariosActivity</string>
    <string name="nuevoUsuario">Crear nuevo usuario</string>
    <string name="modifUsuario">Modificar usuario</string>
    <string name="verUsuario">Ver usuarios existentes</string>
    <string name="title_activity_nuevo_usuario">NuevoUsuarioActivity</string>
    <string name="alias">Alias: </string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_ver_usuarios">VerUsuariosActivity</string>
    <string name="title_activity_pcrearusuario">PCrearusuarioActivity</string>
    <string name="marcame">Márcame!</string>
    <string name="title_activity_lista_usuarios">ListaUsuariosActivity</string>
    <string name="title_activity_lista_usuarios2">ListaUsuarios2Activity</string>
    <string name="title_activity_liga_nusuarios">LigaNUsuariosActivity</string>
    <string name="nusuarios">Indique número de jugadores</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_seleccion_de_jugadores">SeleccionDeJugadoresActivity</string>
    <string name="title_activity_liga_num_usuarios">LigaNumUsuariosActivity</string>
    <string name="title_activity_liga2_jugadores">Liga2JugadoresActivity</string>
    <string name="Jugador1">Jugador 1:</string>
    <string name="Jugador2">Jugador 2:</string>
    <string name="seleccionJugadores">Selección de Jugadores</string>
    <string name="noHayPuntuaciones">No hay usuarios en la base de datos</string>
    <string name="seleccionaJugador1">Selecciona Jugador 1</string>
    <string name="seleccionaJugador2">Selecciona Jugador 2</string>
    <string name="seleccionaJugadores">Selecciona Jugadores</string>
    <string name="gion">" - "</string>
    <string name="resultado">"Resultado: "</string>
    <string name="ok">OK</string>
    <string name="jugador1">Jugador 1 </string>
    <string name="jugador2">Jugador 2 </string>
    <string name="introduzcaNombre">Introduzca su nombre de usuario:</string>
    <string name="usuariosBD">Usuarios en Base de Datos</string>
    <string name="prueba">Esto es una prueba</string>
    <string name="usuario">Usuario</string>
    <string name="gf">GF</string>
    <string name="gc">GC</string>
    <string name="jugados">Partidos jugados</string>
    <string name="ganados">Ganados</string>
    <string name="perdidos">Perdidos</string>
    <string name="empatados">Empatados</string>
    <string name="cero">0</string>
    <string name="usuarioPrueba0">Alias</string>
    <string name="tituloAlerta">Usuario existente</string>
    <string name="textoAlerta">El nombre de usuario elegido ya esta siendo usado. Por favor elija otro. Muchas gracias.</string>
    <string name="noDatosAmistoso">No ha introducido el resultado del partido, por favor, introduzca el resutado antes de continuar.</string>

</resources>