<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".CommunityPES" >

    <Button
        android:id="@+id/bAmistoso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nuevoAmistodo"
        android:onClick="lanzarNuevoPartidoAmistoso" />

    <Button
        android:id="@+id/bCopa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nuevaCopa" />

    <Button
        android:id="@+id/bLiga"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nuevaLiga" />

    <Button
        android:id="@+id/bEstad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/verEst" />

    <Button
        android:id="@+id/bUsuarios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="lanzarGestionDeUsuarios"
        android:text="@string/gestionUsu" />

</LinearLayout>