<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gf"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/juga1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugados"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/juga2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganados"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perdidos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empatados"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/estUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuarioPrueba0"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/estGF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/estGC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/estJugados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/estGanados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/estPerdidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/estEmpatados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>